--- a/project.private.config.json
+++ b/project.private.config.json
@@ -2,8 +2,8 @@
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "projectname": "%E5%85%AD%E5%90%88%E5%B1%852",
   "setting": {
-    "compileHotReLoad": true,
-    "urlCheck": true,
+    "compileHotReLoad": false,
+    "urlCheck": false,
     "bigPackageSizeSupport": true
   }
 }
